@@ -1,3 +1,9 @@
+MODELER-470
+===========
+
+  - EnOcean configuration (Rainer Hitz)
+
+
 Designer 2.13.9 (2013-03-30 Rosemary)
 =====================================
 
